--- a/Home-Dashboard/src/app/meal-plan-home/meal-plan-home.component.scss
+++ b/Home-Dashboard/src/app/meal-plan-home/meal-plan-home.component.scss
@@ -1,5 +1,15 @@
 .example-card {
-  min-width: 450px;
-  min-height: 200px;
+  width: 1000px;
+  height: 300px;
   margin-bottom: 10px;
+}
+
+.list-style{
+  font-size: 30px;
+}
+
+.Meal_Plan_Title{
+  font-size: 50px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
